create 2 files and update 4 files add contact.html add hobby.html

--- a/contents/hobby.html
+++ b/contents/hobby.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/styles.css">
-    <link rel="icon" href="style/favicon.ico">
-    <title>Home</title>
+    <link rel="stylesheet" href="../style/styles.css">
+    <link rel="icon" href="../style/favicon.ico">
+    <title>Hobby</title>
 </head>
 <body>
     <header id="header" class="row" role="banner">
         <div class="headers">
-            <h1>Home</h1>
-            <h2>高専2年生のTomaruです．</h2>
+            <h1>Hobby</h1>
         </div> 
         <div class="hamburger-list">
             <input type="checkbox" id="list-btn-check">
             <label for="list-btn-check" class="list-btn"><span></span></label>
             <div class="list-content">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contents/hobby.html">Hobby</a></li>
-                    <li><a href="contents/contact.html">Contact</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="hobby.html">Hobby</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
