update contact.html, styles.css, styles.min.css and styles.scss

--- a/contents/contact.html
+++ b/contents/contact.html
@@ -14,6 +14,7 @@
         </div> 
         <div class="e-mail">
             <p>学校用メール <a href="mailto:ri24056e@st.omu.ac.jp">ri24056e@st.omu.ac.jp</a></p>
+            <!-- <p>個人用メール <a href="mailto:"></a></p> -->
         </div>
         <!-- <div class="sns">
             <a href="https://twitter.com/Tomaru_kosen" class="sns-icon twitter" target="_blank" rel="noopener noreferrer">Twitter</a>
